Revert bias slider spacing fixes

--- a/popup.css
+++ b/popup.css
@@ -55,25 +55,24 @@ body {
   margin: 0px;
 }
 
-.flex-container {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
 .indicator-l {
   all: initial;
+  position: absolute;
   display: inline-block;
   font-size: small;
+  top: 20px;
+  left: 145px;
   font-family: "Bitter", sans-serif;
   box-sizing: border-box;
 }
 
 .indicator-r {
   all: initial;
+  position: absolute;
   display: inline-block;
   font-size: small;
+  top: 20px;
+  right: 20px;
   font-family: "Bitter", sans-serif;
   box-sizing: border-box;
 }
@@ -84,6 +83,11 @@ body {
   right: 30px;
   width: 100px;
   height: 15px;
+  margin:10px;
+  box-sizing: border-box;
+}
+
+.popup-top {
   all: initial;
   display: inline-block;
   white-space: nowrap;
@@ -95,7 +99,7 @@ body {
   border-radius: 15px 15px 0px 0px;
 }
 
-.popup-source span {
+.popup-source {
   all: initial;
   display: inline-block;
   font-weight: bold;
